traefik/03-certs/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "traefik"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - traefik-admin.dev.brainest.ml
    secretName: letsencrypt-prod-tls
  rules:
  - host: traefik-admin.dev.brainest.ml
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik
          servicePort: 8080
